--- a/index.html
+++ b/index.html
@@ -2,203 +2,351 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Anugerah Sinergijaya Group | Depot Air Minum RO Premium</title>
-
-<meta name="description" content="Anugerah Sinergijaya Group melayani depot air minum RO premium dan jasa pemasangan perangkat depot air RO di Bekasi.">
-<meta name="keywords" content="depot air minum, depot air RO, pemasangan depot air RO, depot air bekasi">
-<meta name="robots" content="index, follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Anugerah Sinergijaya Group | Depot Air Minum RO</title>
+
+<meta name="description" content="Anugerah Sinergijaya Group melayani pembuatan dan pemasangan depot air minum RO profesional dan higienis.">
+<meta name="robots" content="index, follow">
 
 <style>
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:Arial,Helvetica,sans-serif;
-  background:#ffffff;
-  color:#111827;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
+body{background:#fff;color:#222}
+a{text-decoration:none}
 
-/* ===== HERO ===== */
-.hero{
-  background:
-    linear-gradient(180deg,rgba(0,0,0,.55),rgba(0,0,0,.75)),
-    url('1.jpeg') center/cover no-repeat;
-  padding:120px 20px;
-  text-align:center;
-  color:#fff;
+/* HEADER */
+header{
+  position:sticky;top:0;z-index:1000;
+  background:#fff;
+  box-shadow:0 2px 10px rgba(0,0,0,.08)
 }
-
-.hero img{
-  width:130px;
-  margin-bottom:15px;
-  animation:float 3.5s ease-in-out infinite;
+.header{
+  max-width:1200px;margin:auto;
+  padding:12px 20px;
+  display:flex;align-items:center;justify-content:space-between
 }
-
+.logo{
+  display:flex;align-items:center;gap:12px;
+  animation:float 4s ease-in-out infinite
+}
+.logo img{height:46px}
+.logo span{font-weight:700;color:#0d6efd}
 @keyframes float{
   0%{transform:translateY(0)}
-  50%{transform:translateY(-10px)}
+  50%{transform:translateY(-5px)}
   100%{transform:translateY(0)}
 }
+nav a{margin-left:20px;font-weight:600;color:#333}
+nav a:hover{color:#0d6efd}
 
-.hero h1{
-  font-size:2.7em;
-  margin:10px 0;
+/* HERO */
+.hero{
+  background:
+    linear-gradient(rgba(0,0,0,.45),rgba(0,0,0,.45)),
+    url("2.jpeg") center/cover no-repeat;
+  color:#fff;
+  padding:90px 20px
+}
+.hero-inner{max-width:1200px;margin:auto}
+.hero h1{font-size:36px;margin-bottom:12px}
+.hero p{max-width:620px}
+.btn{
+  display:inline-block;margin-top:20px;
+  background:#25d366;color:#000;
+  padding:12px 24px;border-radius:30px;
+  font-weight:700
 }
 
-.hero p{
-  font-size:1.1em;
-  opacity:.95;
-}
+/* SECTION */
+section{padding:70px 20px}
+.container{max-width:1200px;margin:auto}
+.title{text-align:center;margin-bottom:40px}
+.title h2{font-size:30px;color:#0d6efd;margin-bottom:8px}
+.title p{color:#555}
 
-/* ===== SECTION ===== */
-section{
-  max-width:1200px;
-  margin:auto;
-  padding:70px 20px;
-}
-
-h2{
-  text-align:center;
-  font-size:2em;
-  margin-bottom:15px;
-}
-
-.desc{
-  text-align:center;
-  max-width:850px;
-  margin:0 auto 45px;
-  color:#4b5563;
-  line-height:1.7;
-}
-
-/* ===== GRID ===== */
+/* GRID */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:24px;
+  gap:20px
 }
-
-.grid img{
+.card{
+  background:#fff;border-radius:12px;
+  overflow:hidden;
+  box-shadow:0 8px 20px rgba(0,0,0,.08)
+}
+.card img{
   width:100%;
-  height:190px;
-  object-fit:cover;
-  border-radius:10px;
-  transition:.3s;
+  height:200px;
+  object-fit:cover
 }
-
-.grid img:hover{
-  transform:scale(1.05);
-}
-
-/* ===== ADDRESS ===== */
-.address{
-  background:#f8fafc;
-  border-top:1px solid #e5e7eb;
-}
-
-.address-box{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:30px;
+.card .text{
+  padding:14px;
   text-align:center;
+  font-weight:600
 }
 
-.address-box div{
-  background:#ffffff;
-  padding:28px;
-  border-radius:12px;
-  box-shadow:0 6px 22px rgba(0,0,0,.06);
+/* JASA */
+.jasa{background:#f5f7fa}
+.jasa ul{
+  max-width:700px;
+  margin:auto;
+  list-style:none
+}
+.jasa li{
+  padding:12px 0;
+  border-bottom:1px dashed #ccc
 }
 
-/* ===== FOOTER ===== */
+/* FOOTER */
 footer{
-  background:#0f172a;
-  color:#cbd5f5;
-  text-align:center;
-  padding:30px 20px;
-  font-size:14px;
+  background:#0d6efd;
+  color:#fff;
+  padding:40px 20px
+}
+.footer{
+  max-width:1200px;margin:auto;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+  gap:30px
+}
+.copy{text-align:center;margin-top:30px;font-size:14px;opacity:.9}
+
+@media(max-width:768px){
+  .hero h1{font-size:26px}
 }
 </style>
+  <meta charset="UTF-8">
+  <title>Anugerah Sinergijaya Group | Depot Air Minum RO Premium</title>
+
+  <meta name="description" content="Anugerah Sinergijaya Group adalah depot air minum RO premium dan jasa pemasangan perangkat depot air RO di Bekasi.">
+  <meta name="keywords" content="depot air minum, depot air RO, pemasangan depot air RO, depot air bekasi">
+  <meta name="robots" content="index, follow">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0f172a;
+      color: #e5e7eb;
+    }
+
+    header {
+      background: linear-gradient(135deg, #020617, #020617cc),
+                  url('logo.jpeg') center/300px no-repeat;
+      text-align: center;
+      padding: 80px 20px;
+    }
+
+    header img {
+      width: 120px;
+      animation: float 3s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+      100% { transform: translateY(0); }
+    }
+
+    h1 {
+      margin: 20px 0 10px;
+      font-size: 2.4em;
+      color: #38bdf8;
+    }
+
+    section {
+      padding: 60px 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    h2 {
+      text-align: center;
+      color: #38bdf8;
+      margin-bottom: 30px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: #020617;
+      border-radius: 12px;
+      padding: 15px;
+      text-align: center;
+    }
+
+    .card img {
+      width: 100%;
+      max-height: 160px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .card p {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #cbd5f5;
+    }
+
+    footer {
+      background: #020617;
+      padding: 40px 20px;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    .contact {
+      line-height: 1.8;
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- HERO -->
-<div class="hero">
-  <img src="logo.jpeg" alt="Anugerah Sinergijaya Group">
+<header>
+  <div class="header">
+    <div class="logo">
+      <img src="logo.jpeg" alt="Logo">
+      <span>Anugerah<br>Sinergijaya Group</span>
+    </div>
+    <nav>
+      <a href="#produk">Produk</a>
+      <a href="#jasa">Jasa</a>
+      <a href="#pemasangan">Pemasangan</a>
+    </nav>
+  </div>
+  <img src="logo.jpeg" alt="Logo Anugerah Sinergijaya Group">
   <h1>Anugerah Sinergijaya Group</h1>
-  <p>Depot Air Minum RO Premium & Jasa Pemasangan Profesional</p>
+  <p>Depot Air Minum RO Premium & Jasa Pemasangan</p>
+</header>
+
+<div class="hero">
+  <div class="hero-inner">
+    <h1>Depot Air Minum RO Profesional</h1>
+    <p>Melayani pembuatan, penjualan, dan pemasangan depot air minum RO higienis & modern.</p>
+    <a class="btn" href="https://wa.me/6285694319000" target="_blank">Hubungi WhatsApp</a>
+  </div>
 </div>
 
-<!-- TENTANG -->
+<section id="produk">
+  <div class="container">
+    <div class="title">
+      <h2>Produk & Perangkat</h2>
+      <p>Perangkat depot air minum RO</p>
+    </div>
+    <div class="grid">
+      <div class="card"><img src="1.jpeg"><div class="text">Mesin RO</div></div>
+      <div class="card"><img src="2.jpeg"><div class="text">Depot RO</div></div>
+      <div class="card"><img src="3.jpeg"><div class="text">Proses Pengisian</div></div>
+      <div class="card"><img src="4.jpeg"><div class="text">Instalasi</div></div>
+      <div class="card"><img src="5.jpeg"><div class="text">Kabinet</div></div>
+      <div class="card"><img src="6.jpeg"><div class="text">Tangki Air</div></div>
+      <div class="card"><img src="7.jpeg"><div class="text">Workshop</div></div>
+      <div class="card"><img src="8.jpeg"><div class="text">Depot Siap Operasi</div></div>
+    </div>
+  </div>
 <section>
-  <h2>Tentang Kami</h2>
-  <p class="desc">
-    Anugerah Sinergijaya Group merupakan penyedia depot air minum RO premium
-    serta jasa pemasangan perangkat depot air RO dengan standar higienis,
-    profesional, dan terpercaya.
+  <h2>Profil Usaha</h2>
+  <p style="text-align:center;max-width:800px;margin:auto;">
+    Anugerah Sinergijaya Group bergerak di bidang depot air minum RO premium
+    serta jasa pemasangan perangkat depot air RO dengan kualitas profesional,
+    higienis, dan terpercaya.
   </p>
 </section>
 
-<!-- GALERI DEPOT -->
+<section id="jasa" class="jasa">
+  <div class="container">
+    <div class="title">
+      <h2>Jasa Kami</h2>
+      <p>Layanan lengkap depot air minum RO</p>
+    </div>
+    <ul>
+      <li>✔️ Pembuatan depot air minum RO</li>
+      <li>✔️ Penjualan mesin RO</li>
+      <li>✔️ Jasa pemasangan depot air minum</li>
+      <li>✔️ Renovasi & upgrade depot</li>
+      <li>✔️ Servis & perawatan</li>
+    </ul>
 <section>
-  <h2>Depot Air Minum RO</h2>
+  <h2>Galeri Depot Air Minum</h2>
   <div class="grid">
-    <img src="1.jpeg">
-    <img src="2.jpeg">
-    <img src="3.jpeg">
-    <img src="4.jpeg">
-    <img src="5.jpeg">
-    <img src="6.jpeg">
-    <img src="7.jpeg">
-    <img src="8.jpeg">
-  </div>
+    <div class="card"><img src="1.jpeg"><p>Unit Depot Air RO</p></div>
+    <div class="card"><img src="2.jpeg"><p>Mesin Filtrasi Air</p></div>
+    <div class="card"><img src="3.jpeg"><p>Proses Produksi</p></div>
+    <div class="card"><img src="4.jpeg"><p>Pengisian Air Minum</p></div>
+    <div class="card"><img src="5.jpeg"><p>Peralatan Steril</p></div>
+    <div class="card"><img src="6.jpeg"><p>Depot Siap Operasi</p></div>
+    <div class="card"><img src="7.jpeg"><p>Hasil Produksi</p></div>
+    <div class="card"><img src="8.jpeg"><p>Depot Premium</p></div>
+</div>
 </section>
 
-<!-- PEMASANGAN -->
+<section id="pemasangan">
+  <div class="container">
+    <div class="title">
+      <h2>Jasa Pemasangan Depot RO</h2>
+      <p>Dokumentasi pemasangan</p>
+    </div>
+    <div class="grid">
+      <div class="card"><img src="pemasangan1.jpeg"><div class="text">Pemasangan 1</div></div>
+      <div class="card"><img src="pemasangan2.jpeg"><div class="text">Pemasangan 2</div></div>
+      <div class="card"><img src="pemasangan3.jpeg"><div class="text">Pemasangan 3</div></div>
+      <div class="card"><img src="pemasangan4.jpeg"><div class="text">Pemasangan 4</div></div>
+      <div class="card"><img src="pemasangan5.jpeg"><div class="text">Pemasangan 5</div></div>
+      <div class="card"><img src="pemasangan6.jpeg"><div class="text">Pemasangan 6</div></div>
+      <div class="card"><img src="pemasangan7.jpeg"><div class="text">Pemasangan 7</div></div>
+      <div class="card"><img src="pemasangan8.jpeg"><div class="text">Pemasangan 8</div></div>
+      <div class="card"><img src="pemasangan9.jpeg"><div class="text">Pemasangan 9</div></div>
+      <div class="card"><img src="pemasangan10.jpeg"><div class="text">Pemasangan 10</div></div>
+    </div>
 <section>
-  <h2>Pemasangan Depot Air RO</h2>
-  <p class="desc">
-    Dokumentasi beberapa hasil pemasangan perangkat depot air RO
-    yang telah kami kerjakan.
-  </p>
+  <h2>Jasa Pemasangan Depot Air RO</h2>
   <div class="grid">
-    <img src="pemasangan1.jpeg">
-    <img src="pemasangan2.jpeg">
-    <img src="pemasangan3.jpeg">
-    <img src="pemasangan4.jpeg">
-    <img src="pemasangan5.jpeg">
-    <img src="pemasangan6.jpeg">
-    <img src="pemasangan7.jpeg">
-    <img src="pemasangan8.jpeg">
-    <img src="pemasangan9.jpeg">
-    <img src="pemasangan10.jpeg">
-  </div>
-</section>
-
-<!-- ALAMAT -->
-<section class="address">
-  <h2>Alamat & Kontak</h2>
-  <div class="address-box">
-    <div>
-      <strong>Kantor Pusat</strong><br><br>
-      Jl. Bintara VII RT 004 RW 003<br>
-      Bekasi
-    </div>
-    <div>
-      <strong>Cabang</strong><br><br>
-      Jl. Malaka Baru No 8A RT 05 RW 01<br>
-      Bintara, Bekasi Barat
-    </div>
-    <div>
-      <strong>Kontak</strong><br><br>
-      📞 0856-9431-9000
-    </div>
-  </div>
+    <div class="card"><img src="pemasangan1.jpeg"><p>Pemasangan RO 1</p></div>
+    <div class="card"><img src="pemasangan2.jpeg"><p>Pemasangan RO 2</p></div>
+    <div class="card"><img src="pemasangan3.jpeg"><p>Pemasangan RO 3</p></div>
+    <div class="card"><img src="pemasangan4.jpeg"><p>Pemasangan RO 4</p></div>
+    <div class="card"><img src="pemasangan5.jpeg"><p>Pemasangan RO 5</p></div>
+    <div class="card"><img src="pemasangan6.jpeg"><p>Pemasangan RO 6</p></div>
+    <div class="card"><img src="pemasangan7.jpeg"><p>Pemasangan RO 7</p></div>
+    <div class="card"><img src="pemasangan8.jpeg"><p>Pemasangan RO 8</p></div>
+    <div class="card"><img src="pemasangan9.jpeg"><p>Pemasangan RO 9</p></div>
+    <div class="card"><img src="pemasangan10.jpeg"><p>Pemasangan RO 10</p></div>
+</div>
 </section>
 
 <footer>
-  © 2025 Anugerah Sinergijaya Group
+  <div class="footer">
+    <div>
+      <h3>Anugerah Sinergijaya Group</h3>
+      <p>Spesialis depot air minum RO profesional & terpercaya.</p>
+    </div>
+    <div>
+      <h3>Kontak</h3>
+      <p>WhatsApp: 0856-9431-9000</p>
+    </div>
+  <div class="contact">
+    <strong>Alamat Pusat:</strong><br>
+    Jl. Bintara VII RT 004 RW 003, Bekasi<br><br>
+
+    <strong>Cabang:</strong><br>
+    Jl. Malaka Baru No 8A RT 05 RW 01<br>
+    Bintara, Bekasi Barat<br><br>
+
+    <strong>Kontak:</strong><br>
+    📞 0856-9431-9000
+</div>
+  <div class="copy">© 2026 Anugerah Sinergijaya Group</div>
+
+  <p style="margin-top:20px;">
+    © 2025 Anugerah Sinergijaya Group
+  </p>
 </footer>
 
 </body>
